--- a/styles/universal.scss
+++ b/styles/universal.scss
@@ -328,13 +328,21 @@ section:not(.hero):not(.projects) > .content {
   }
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 640px) {
   html {
     font-size: 15px;
   }
 
   h1 {
     font-size: 15vw;
+  }
+
+  .desktop {
+    display: none !important;
+  }
+
+  .mobile {
+    display: block;
   }
   
   section:nth-of-type(1n+1) {
